# AI_Production_System

./: DEPLOYMENT.md  README.md  deploy.ps1  package-lock.json  package.json  websocket-test.html  项目结构文档.md  项目需求文档.md
ai_admin/: .env  (+6 more)
fastapi-backend/: .env  SECURITY_UPGRADE.md  WEBSOCKET_IMPLEMENTATION.md  check_menu_schema.py  env.example  fastapi学习值得记录的.md  fastapi项目标准架构  pyproject.toml  websocket_example.html
fastapi-backend/app/: main.py  main_production.py  reset_users.py  settings.py
fastapi-backend/app/api/: department.py  echarts.py  equ_monitor.py  equ_monitor_ws.py  fault.py  form.py  menu.py  mysql_query.py  oauth2.py  rbac.py  user.py  websocket.py
fastapi-backend/app/config/: auth_config.py  mysql_config.py  point_map.py  tdengine_config.py
fastapi-backend/app/migrations/models/: 0_20250806130445_init.py  10_20251201165234_drop_unused_tables.py  11_20251202172000_drop_roles_from_menu.py  12_20251203164853_update_menu_type_and_permission.py  13_20251204151935_add_submission_draft.py  14_20251205145244_update.py  1_20250923105107_update.py  1_20250923204411_update.py  2_20250924141517_add_password_hashing.py  3_20250925172210_None.py  4_20251130184743_add_department_to_user.py  5_20251130192750_create_department_table.py  6_20251201111709_add_form_table.py  (+3 more)
fastapi-backend/app/models/: models.py
fastapi-backend/app/schemas/: echarts.py  equ_bending.py  fault_info.py  form.py  menu.py  rbac.py  user.py  websocket_connect.py
fastapi-backend/app/utils/: auth_utils.py  dependencies.py  migrate_passwords(old).py  mysql_query.py  websocket_connect.py
(+490 files in other folders)
