[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.8.2",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "aiomysql>=0.2.0",
    "asyncmy>=0.2.10",
    "cryptography>=45.0.4",
    "fastapi[standard]>=0.115.13",
    "flask>=3.1.1",
    "lxml>=5.4.0",
    "opcua>=0.98.13",
    "pandas>=2.3.0",
    "pydantic[email]>=2.11.7",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.0",
    "taospy[ws]>=2.8.1",
    "tomli-w>=1.2.0",
    "tomlkit>=0.13.3",
    "tortoise-orm>=0.21.6",
    "tortoise[all,models]>=0.1.1",
    "uvicorn>=0.34.3",
]

[tool.aerich]
tortoise_orm = "app.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
